# ic-alloy-toolkit

./: .gitignore  README.md  dfx.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/backend/: Cargo.toml  backend.did
src/backend/src/: evm_rpc.rs  lib.rs
src/backend/src/service/: get_address.rs  get_balance.rs  get_batch_balances.rs  get_latest_block.rs  mod.rs  send_eth.rs  send_eth_with_fillers.rs  sign_message.rs  watch_blocks.rs  watch_usdc_transfer.rs
src/frontend/: App.css  App.tsx  index.css  main.tsx  routeTree.gen.ts
src/frontend/components/: source.tsx  spinner.tsx
src/frontend/routes/: __root.tsx  get_address.lazy.tsx  get_balance.lazy.tsx  get_batch_balances.lazy.tsx  get_latest_block.lazy.tsx  index.lazy.tsx  send_eth.lazy.tsx  send_eth_with_fillers.lazy.tsx  sign_message.lazy.tsx  watch_blocks.lazy.tsx  watch_usdc_transfer.lazy.tsx
