[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
alloy = { path = "../../../ic-alloy/crates/alloy", default-features = false, features = [
    "providers",
    "icp",
] }
getrandom = { version = "0.2.15", features = ["custom"] }
rand_chacha = { version = "0.3.1" }
ic-cdk-timers = "0.10.0"
